[package]
name = "livestorm-lambda"
version = "0.1.0"
authors = ["guillaume.mazollier@soprabanking.com <guillaume.mazollier@soprabanking.com>"]
edition = "2018"
autobins = false

[dependencies]
anyhow = "1.0.34"
lambda_runtime = "0.2"
log = "0.4"
serde = "1"
serde_json = "1"
serde_derive = "1"
simple-error = "0.2"
simple_logger = "1.11"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
